# learn-wgpu

./: Cargo.toml  flake.nix  rustfmt.toml
src/: main.rs
src/app/: app.rs  gpu_wrapper.rs  mod.rs  module.rs  pass.rs  resources.rs  state.rs  window_wrapper.rs
src/gpu_pass/: buffer_wrapper.rs  compute_pass.rs  gpu_pass.rs  mod.rs  render_pass.rs
src/gpu_pass/shaders/: draw.wgsl
src/modules/: fps.rs
src/particle_sim/: compute_pass.rs  mod.rs  params.rs  particle.rs  particle_sim.rs  render_pass.rs  shared.rs  window.rs
src/particle_sim/shaders/: draw.wgsl  move.wgsl
