[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
futures = "0.3.31"
log = "0.4.29"
rand = "0.9.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "tracing", "macros"] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
wgpu = "28.0.0"
winit = "0.30.12"
